--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -6,9 +6,8 @@
   text-align: center;
   padding-top: 29px;
   padding-bottom: 29px;
-  color: $grey-primary-color;
+  color: currentColor;
   background-color: $grey-secondary-color;
-
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: inherit;
@@ -18,6 +17,12 @@
 
     font-size: 16px;
     line-height: 1.2;
+  }
+  &.light-theme {
+    background-color: $grey-secondary-color;
+  }
+  &.dark-theme {
+    background-color: #2b2a2a;
   }
 }
 
@@ -60,7 +65,7 @@
 
 .footer__developers--link {
   display: inline-flex;
-  color: $grey-primary-color;
+  color: currentColor;
   transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms ease-in-out;
   text-decoration: underline;
 }
