--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -20,7 +20,7 @@
   }
 
   h2 {
-    color: $secondary-text-color;
+    color: currentColor;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -100,7 +100,7 @@
 }
 
 .main-title {
-  color: #000000;
+  color: currentColor;
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -131,6 +131,7 @@
 .main-btn button {
   min-width: 135px;
   padding: 5px 0;
+  color: currentColor;
   background-color: transparent;
   border: 2px solid $accent-color;
   transition: all $animation-dur cubic-bezier(0.17, 0.67, 0.83, 0.67);
