--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -76,6 +76,82 @@
     padding-bottom: 65px;
   }
 }
+.theme-switch {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  @media screen and(min-width: $tablet) {
+    right: 76px;
+  }
+  @media screen and(min-width: $desktop) {
+    right: 71px;
+  }
+  &__icon {
+    color: $primary-text-color;
+    height: 24px;
+    width: 24px;
+    margin-right: 8px;
+    margin-left: 8px;
+  }
+  &__control {
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    position: relative;
+    width: 64px;
+    height: 20px;
+    border-radius: 50em;
+    padding: 3px 0;
+  }
+  &__toggle {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    height: 0;
+    width: 0;
+    pointer-events: none;
+    &:checked + .theme-switch__track {
+      background-color: #fff;
+    }
+    &:checked ~ .theme-switch__marker {
+      transform: translateX(39px);
+    }
+    &:focus + .theme-switch__track,
+    &:active + .theme-switch__track {
+      box-shadow: 0 0 0 3px $accent-color;
+    }
+  }
+  &__track {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: transparent;
+    user-select: none;
+    background-color: #333;
+    border-radius: inherit;
+    z-index: 1;
+    cursor: pointer;
+  }
+  &__marker {
+    position: relative;
+    background-color: #fff;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    z-index: 2;
+    pointer-events: none;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    transform: translateX(-1px);
+    transition: transform $theme-switch-dur $theme-switch;
+  }
+}
 .header__logo {
   position: absolute;
   top: 46px;
@@ -134,13 +210,13 @@
     &:hover::after,
     &:focus::after {
       opacity: 1;
-      bottom: 0;
+      bottom: -1px;
     }
     &::after {
       content: '';
       position: absolute;
       left: 0;
-      bottom: 0;
+      bottom: -1px;
       display: block;
       width: 100%;
       opacity: 0;
@@ -152,7 +228,7 @@
       content: '';
       position: absolute;
       left: 0;
-      bottom: 0;
+      bottom: -1px;
       display: block;
       opacity: 1;
       height: 3px;
