--- a/src/templates/render-modal-film-page.hbs
+++ b/src/templates/render-modal-film-page.hbs
@@ -56,7 +56,7 @@
 
     <button class="close-modal__button">
       <svg class="modal-icon" width="14" height="14">
-        <path fill="none" stroke-width="2.133" stroke="#000" d="M8.533 8.533l14.933 14.933M8.533 23.467L23.466 8.534"/>
+        <path fill="none" stroke-width="2" stroke="currentColor" d="M8.533 8.533l14.933 14.933M8.533 23.467L23.466 8.534"/>
         </symbol>
       </svg>
     </button>
