--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -4,8 +4,8 @@
       <svg class="modal__icon-footer" width="14" height="14">
         <path
           fill="none"
-          stroke-width="2.133"
-          stroke="#000"
+          stroke-width="2"
+          stroke="currentColor"
           d="M8.533 8.533l14.933 14.933M8.533 23.467L23.466 8.534"
         />
       </svg>
