--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <svg class="header__logo-icon" width="24" height="24">
         <use href="./images/sprite.svg#icon-film"></use>
       </svg>
-      <span class="header__logo-text">Filmoteka</span>
+      <h1 class="header__logo-text">Filmoteka</h1>
     </a>
     <nav class="header-nav">
       <ul class="header-nav__list">
