--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -148,3 +148,10 @@
     color: $primary-text-color;
   }
 }
+#dayTrend,
+#weekTrend {
+  &.is-active {
+    background-color: $accent-color;
+    color: $primary-text-color;
+  }
+}
